@@ -1,0 +1,6 @@
+MD5 8d9d5c8ed53f1f97cc997c2612bc3993 wine-0.9.54.tar.bz2 13106716
+RMD160 5208470586169ad2e86745506a79347002871155 wine-0.9.54.tar.bz2 13106716
+SHA256 ce877d0fcce366dc22faa33ddc57024ca2e1af90564d044d6eb97c4e54d2988f wine-0.9.54.tar.bz2 13106716
+MD5 b188c296f045d20abdb11e9c0564894b wine_gecko-0.1.0.cab 5746895
+RMD160 61f85ee39e96f88783541460d2fce31db7cc0183 wine_gecko-0.1.0.cab 5746895
+SHA256 4ef0bffa49a9abc86f74257aa8d7f5db806e8e8bd780149244149aa3f9292d10 wine_gecko-0.1.0.cab 5746895
