@@ -1,0 +1,3 @@
+MD5 aaa6beeb41a6f04963dff58f24a55b96 findutils-4.2.32.tar.gz 1431566
+RMD160 7c3dba236cc496fdaf514deb15ed795b825c6bd3 findutils-4.2.32.tar.gz 1431566
+SHA256 87bd8804f3c2fa2fe866907377afd8d26a13948a4bb1761e5e95d0494a005217 findutils-4.2.32.tar.gz 1431566
