@@ -1,0 +1,3 @@
+MD5 c0be1d1d376b3a13813a230aa74af9b5 findutils-4.3.12.tar.gz 2041817
+RMD160 0d418e4f161d148464cc74d9eac687f61ce90664 findutils-4.3.12.tar.gz 2041817
+SHA256 ab3c09b6bb5447f78e4ae9fcd1f94677701b8cb7daf3e00872adf05a4a28bdbe findutils-4.3.12.tar.gz 2041817
