@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/findutils
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/findutils/ChangeLog,v 1.147 2007/12/18 16:35:51 pebenito Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/findutils/ChangeLog,v 1.148 2008/01/26 06:10:52 vapier Exp $
+
+*findutils-4.3.12 (26 Jan 2008)
+*findutils-4.2.32 (26 Jan 2008)
+
+  26 Jan 2008; Mike Frysinger <vapier@gentoo.org> +findutils-4.2.32.ebuild,
+  +findutils-4.3.12.ebuild:
+  Version bump.
 
   18 Dec 2007; Chris PeBenito <pebenito@gentoo.org>
   +files/findutils-4.3.11-selinux.diff, findutils-4.3.11.ebuild:
